removed redundant code in css, fixed see also background to fit whole page, edited video settings to play on iPhones

--- a/css/main.css
+++ b/css/main.css
@@ -41,38 +41,47 @@
 }
 
 video {
-  max-width: 100%;
-  height: auto;
-  display: block;
-  margin: 0 auto;
-}
-
-#pettingCatVideo {
   max-width: 800px;
   width: 100%;
   height: auto;
   display: block;
   margin: 0 auto;
 }
+
+/* #pettingCatVideo {
+  max-width: 800px;
+  width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+} */
 
 #waterbowlCatVideo {
   max-width: 800px;
   width: 100%;
-  max-height: 1000px;
+  max-height: 900px;
   height: auto;
   display: block;
   margin: 0 auto;
   object-fit: cover;
 }
 
-#unlockingCatVideo {
+/* #unlockingCatVideo {
   max-width: 800px;
   width: 100%;
   height: auto;
   display: block;
   margin: 0 auto;
-}
+} */
 
+.container {
+  background-image: url("../img/stardew_background.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh; /* ensures it fills the viewport */
+  width: 100%;
+}
 
 .see-also-content {
   font-family: sans-serif;
@@ -83,7 +92,7 @@ video {
   background-color: black;
   color: white;
   padding-right: 25px;
-  z-index: 10;
+  /* z-index: 10; */
   max-width: 90vw;
   box-sizing: border-box;
 }
@@ -91,15 +100,6 @@ video {
 .see-also-links {
   font-family: sans-serif;
   color: white;
-}
-
-.container {
-  background-image: url("../img/stardew_background.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  min-height: 100vh; /* ensures it fills the viewport */
-  width: 100%;
 }
 
 /* When the screen is less than 800 pixels wide */
